# zcode2api

./: .dockerignore  .env.example  Dockerfile  README.md  _app_body.json  _app_token.txt  _inject_hook.py  _minimize.py  _minimize2.py  _probe_billing.py  _probe_billing2.py  _probe_body.py  _probe_chat.py  _probe_doc_format.py  _probe_final.py  _probe_find_endpoint.py  _probe_methods.py  _probe_model_grid.py  _probe_region.py  _probe_routes.py  _probe_startplan.py  _probe_stream.py  _probe_working.py  _resp_billing.txt  _resp_chat2.txt  _resp_chat3.txt  _sim_quota.py  _sim_quota2.py  _sys_prompt.json  _test_rnet_stream.py  _zcode_system.json  captcha-proxy.html  import_tokens.py  pyproject.toml  requirements.txt  test_403_compare.py  test_403_compare2.py  test_403_ua.py  test_403_valid.py  test_403_valid2.py  (+22 more)
.github/workflows/: docker-build.yml
app/: agent.py  camoufox_solver.py  captcha.py  main.py  oauth.py  openai_bridge.py  quota.py  rnet_client.py  settings.py  solver_server.py  store.py  system_prompt.py
app/routes/: admin_api.py  captcha_routes.py  gateway.py  internal_api.py
app/statics/: captcha-solver.html
app/statics/admin/: accounts.html  captcha.html  settings.html
app/statics/css/: app.css
app/statics/js/: header.js
captcha_node/: package-lock.json  package.json  server.js  solver.js  solver_core.js  solver_pw.js  test_nvc.js  test_trace.js
