[project]
name = "zcode2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]
